added images to local source

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
         <ul class="insects-list">
             <button class="choose-insect-btn">
                 <p>Fly</p>
-                <img src="http://pngimg.com/uploads/fly/fly_PNG3953.png" alt="fly" srcset="">
+                <img src="img/fly.png" alt="fly" srcset="">
             </button>
 
             <button class="choose-insect-btn">
                 <p>Mosquito</p>
-                <img src="http://pngimg.com/uploads/mosquito/mosquito_PNG18160.png" alt="mosquito" srcset="">
+                <img src="img/mosquito.png" alt="mosquito" srcset="">
             </button>
 
             <button class="choose-insect-btn">
                 <p>Spider</p>
-                <img src="http://pngimg.com/uploads/spider/spider_PNG16.png" alt="spider" srcset="">
+                <img src="img/spider.png" alt="spider" srcset="">
             </button>
 
             <button class="choose-insect-btn">
                 <p>Roach</p>
-                <img src="http://pngimg.com/uploads/roach/roach_PNG12174.png" alt="roach" srcset="">
+                <img src="img/roach.png" alt="roach" srcset="">
             </button>
         </ul>
     </div>
