--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="screen">
-        <h1>Catch the Fly</h1>
+        <h1>Catch the Insect</h1>
         <button class="btn btn-start">Play Game</button>
     </div>
 
